# DevPort

./: .gitignore
firmware/: .gdbinit  CMakeLists.txt  debug_server  led_test.cpp  main.cpp  port_hubs.hpp  port_hubs.impl  runtime.cpp  samd51j19a_flash.ld  temperature.hpp  usb_hub.hpp
firmware/assert/: CMakeLists.txt  assert.cpp  assert.h
firmware/cmake/: addional_targets.cmake  arm-none-eabi-gcc.cmake
firmware/drivers/: CMakeLists.txt  async_i2c.cpp  async_i2c.hpp  error_handler.hpp  hpl_sercom_config.h  layout.hpp  port_hub.cpp  port_hub.hpp  ring_buffer.hpp  timer.cpp  timer.hpp  usb_cdc.cpp  usb_cdc.hpp  usb_hub_gpios.hpp
hardware/: .gitignore  lichtleiter.FCStd  todo.txt
hardware/base-plane/: base-plane-cache.lib  base-plane-rescue.lib  base-plane.kicad_pcb  base-plane.pro  base-plane.sch  controller.sch  fp-lib-table  hub.sch  inputs.sch  outputs.sch  power.sch  sym-lib-table  user_interface.sch
hardware/base-plane/production/: base-plane-B_Cu.gbl  base-plane-B_Mask.gbs  base-plane-B_Paste.gbp  base-plane-B_SilkS.gbo  base-plane-Edge_Cuts.gm1  base-plane-F_Cu.gtl  base-plane-F_Mask.gts  base-plane-F_Paste.gtp  base-plane-F_SilkS.gto  base-plane-GND.g2  base-plane-Horz.g5  base-plane-NPTH.drl  base-plane-PTH.drl  base-plane-VCC.g3  base-plane-Vert.g4
hardware/components/: 2021-02-17_12-15-39.lib  692622420101.lib  FH12-24S-0.5SH_55_.lib  HRS_FH12-24S-0.5SH(55).kicad_mod  IND_LQH32PZ100MNCL.kicad_mod  LQH32PZ100MNCL.lib  QFN50P700X700X90-49N.kicad_mod  io.lib  switches.lib  touch-wheel.kicad_mod  usb_connectors.lib  wheel.kicad_mod
hardware/components/Diode_Wurth%20Electronics%20Inc_8240116/: eec.dcm  eec.lib
hardware/components/Diode_Wurth%20Electronics%20Inc_8240116/eec.models/: Wurth_Electronics_Inc_-_8240116.step
hardware/components/Diode_Wurth%20Electronics%20Inc_8240116/eec.pretty/: Wurth_Electronics_Inc-8240116-MFG.kicad_mod
hardware/components/FTSH-105-XX-X-DV/: FTSH-105-XX-X-DV.lib  SAMTEC_FTSH-105-XX-X-DV.kicad_mod
hardware/components/FTSH-110-X-X-DV/: FTSH-110-X-X-DV.lib  SAMTEC_FTSH-110-X-X-DV.kicad_mod
hardware/components/TUSB8041RGCR/: QFN50P900X900X100-65N.kicad_mod  TUSB8041RGCR.lib
hardware/components/Torrox.pretty/: Torrox_Black.kicad_mod  Torrox_Black.ps
hardware/components/leds_and_switches.pretty/: KRTB_AELPS1.32.kicad_mod  MSL0601RGB.kicad_mod  TA-633.kicad_mod
hardware/components/ul_TPD4EUSB30DQAR/KiCAD/2021-02-24_16-56-59/: 2021-02-24_16-56-59.lib
hardware/components/ul_TPD4EUSB30DQAR/KiCAD/2021-02-24_16-56-59/footprints.pretty/: TPD4EUSB30DQAR.kicad_mod
hardware/components/ul_TPS74601PBQWDRVRQ1/: ul_TPS74601PBQWDRVRQ1.lib
hardware/components/ul_TPS74601PBQWDRVRQ1/footprints.pretty/: TPS74601PBQWDRVRQ1.kicad_mod
hardware/components/usb_connectors.pretty/: 692622420101.kicad_mod  LUSB-3593-00.kicad_mod  SLP1006P2.kicad_mod  UDFN8.kicad_mod  WR-COM_USB_3.0_Horizontal_SMT.kicad_mod  ZX360D-B-10P(30).kicad_mod
hardware/led-test/: fp-lib-table  led-test-cache.lib  led-test-rescue.lib  led-test.kicad_pcb  led-test.pro  led-test.sch  sym-lib-table
hardware/port-plane/port-plane/: fp-lib-table  hub.sch  input.sch  output1.sch  output2.sch  output3.sch  output4.sch  outputs.sch  port-plane-cache.lib  port-plane.kicad_pcb  port-plane.pro  port-plane.sch  port0_1.sch  port2_3.sch  power.sch  sym-lib-table  user_interface.sch
hardware/touch-pannel/touch-pannel/: fp-lib-table  touch-pannel-cache.lib  touch-pannel.kicad_pcb  touch-pannel.pro  touch-pannel.sch
scripts/: touch-wheel.py
